some visual changes to checker pieces and a fix to double jumps to king moves

--- a/src/App.scss
+++ b/src/App.scss
@@ -43,7 +43,7 @@ u:nth-child(2) {
   max-width: 30em;
     padding: .5em 0;
   .playerOne, .playerTwo{
-      background: #151515;
+      background: #333333;
       border-radius: 100%;
   height: 1em;
   pointer-events: none;
