--- a/src/Tiles/Tiles.scss
+++ b/src/Tiles/Tiles.scss
@@ -41,14 +41,43 @@
     align-items: center;
     display: flex;
     justify-content: center;
+    box-sizing: b0rder-box;
     }
     &.playerOne{
-        background: #151515;
+        background: #333333;
         box-shadow: 0px 3px 1px #46262f;
+        position: relative;
+        &:after {
+          position: absolute;
+          box-sizing: border-box;
+          width:80%;
+          height:80%;
+          content: '';
+          background: #333333;
+          border:1px solid #262626;
+          border-radius: 999px;
+          left: 10%;
+          top: 10%;
+          box-shadow: inset 0px 2px 5px rgba(0,0,0,.3);
+        }
     }
     &.playerTwo{
         background: #fafaf4;
         box-shadow: 0px 3px 1px #46262f;
+        position: relative;
+        &:after {
+          position: absolute;
+          box-sizing: border-box;
+          width:80%;
+          height:80%;
+          content: '';
+          background: #fafaf4;
+          border:1px solid #ccc;
+          border-radius: 999px;
+          left: 10%;
+          top: 10%;
+          box-shadow: inset 0px 2px 5px rgba(0,0,0,.1);
+        }
     }
   }
   }
